@@ -1,3 +1,7 @@
+2007-05-31  Arno Rehn  <arno@arnorehn.de>
+
+	* Added a hack in uics for QFrame.Shape and QFrame.Shadow
+
 2007-05-31  Richard Dale  <rdale@foton.es>
 
 	* Regenerated the Qyoto sources from the release version of Qt 4.3
